--- a/views/index.haml
+++ b/views/index.haml
@@ -637,8 +637,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/bwcollage1.jpg" alt="bwcollage")/
       .project-description
-        %span Black & White Collage 1
-        %p In a graduate school course called "Design Process; Visual Communication", we were asked to blindly pick out three objects from our professor's bag of goodies and to arrange them into some sort of collage after scanning them using a xerox machine. I ended up with a screw, an apple and a crayon tip. This is the first of three collages I came up with.   
+        %span Composing with random objects, part 1.1
+        %p In a graduate school course called "Design Process; Visual Communication", we were given an assignment with the following parameters. We were to create three different compositions in black and white with objects randomly picked out from a bag. We were allowed to use a Xerox machine to create copies and we were allowed to alternate the size of these objects. Each object was allowed to appear several times in the same composition. I picked a screw, an apple and a crayon tip. This is the first of three from the black and white series.   
   
 #bwcollage2    
   .detail-container
@@ -646,8 +646,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/bwcollage3.jpg" alt="bwcollage")/
       .project-description
-        %span Black & White Collage 2
-        %p This is the second of the three collages. I chose to do my scans in black & white to play on the contrast between color and texture.
+        %span Composing with random objects, part 1.2
+        %p This is the secod of three from the black and white series. This particular collage was received well and had the most positive critique, with the placing of the incredibly abstract crayon tip in the upper left side. It is also my personal favorite from the series.  
   
         
 #bwcollage3     
@@ -656,8 +656,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/bwcollage2.jpg" alt="bwcollage")/
       .project-description
-        %span Black & White Collage 3
-        %p This is the third of three collages. It attempts to additional contrast through the use of image discontinuity.
+        %span Composing with random objects, part 1.3
+        %p This is the third of three from the black and white series. I attempted to add additional contrast by applying image discontinuity, where an object is misaligned with itself.
               
 #color_collage1     
   .detail-container
@@ -665,8 +665,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/colorCollage1.jpg" alt="color collage")/
       .project-description
-        %span Color Collage 1
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing. 
+        %span Composing with random objects, part 2.3
+        %p Above is part 3 of the color collage series.
         
 #color_collage2     
   .detail-container
@@ -674,8 +674,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/colorCollage2.jpg" alt="color collage")/
       .project-description
-        %span Color Collage 2
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %span Composing with random objects, part 2.1
+        %p In the same graduate design course, we were given a similar assignment to the black and white collages, in which we were asked to create three surrealistic non-descriptive, non-narrative collages in color using at least 5 visual elements. This is a series of three stand alone pieces. Above is part one of the color collage series.
                 
 #color_collage3     
   .detail-container
@@ -683,8 +683,8 @@
       %a.close#js-close-modal(href="#")
       %img(src="/images/portfolio/print/colorCollage3.jpg" alt="color collage")/
       .project-description
-        %span Color Collage 3
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %span Composing with random objects, part 2.2
+        %p Above is part two of the color collage series.
         
 #sycamore  
   .detail-container
@@ -693,7 +693,7 @@
       %img(src="/images/portfolio/woodwork/sycamore.jpg" alt="sycamore")/
       .project-description
         %span Sycamore Box
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %p This multi-purpose box was an exercise on miter joints coupled with accented splines for structural support. The piece was inspired by the striking contrast of this particular board of sycamore. Its linear accents are complimented by ebony corners. I crafted this piece after-hours during my days as a junior woodworker. In addition to the woodwork, I provided the graphic composition seen here.
         
 #walnut  
   .detail-container
@@ -702,7 +702,7 @@
       %img(src="/images/portfolio/woodwork/walnut.jpg" alt="walnut")/
       .project-description
         %span Walnut Coffee Table
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %p I had the honor of working with a talented fellow woodworker in designing and producing this amazing coffee table. His design was inspired by the butterfly joint and the contrast between heart and sap wood in American Black Walnut. It is a simple and modern piece with contrasting grain pattern and symmetrical joints which gives this piece character and makes it unique. In addition to my contribution in producing this piece, I provided the graphic composition seen here.
         
 #walnut_shelves
   .detail-container
@@ -711,7 +711,7 @@
       %img(src="/images/portfolio/woodwork/walnut_shelves.jpg" alt="walnut shelves")/
       .project-description
         %span Walnut Shelves
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %p I had the honor of working with a talented fellow woodworker in designing and producing these shelves. They were inspired by the cantilever which gives it a free floating quality. The subtle taper and its single bridal joint are the central components for its functionality and character. They work well on their own but work best when paired along side each other. In addition to my contribution in producing these pieces, I provided the graphic composition seen here.
         
 #cherry
   .detail-container
@@ -720,6 +720,6 @@
       %img(src="/images/portfolio/woodwork/cherry.jpg" alt="cherry cabinets")/
       .project-description
         %span Cherry Cabinets
-        %p Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+        %p Similar to the sycamore box, these file cabinets were an exercise on miter joints coupled with accented splines for structural support, but on a larger scale. Designed to hold hanging legal sized folders, they are small enough to place underneath a desk or to stack on top of each other. In addition to the woodwork, I provided the graphic composition seen here.
             
 / END LARGE PROJECT DESCRIPTIONS
