--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -19,7 +19,7 @@ $neon-green: #dcf74a;
 @mixin main_container {
   float: left;
   width: 1040px;
-  margin: 127px 0 0 163px;
+  margin: 127px 0 30px 163px;
   z-index: 200
 }
 
