--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,6 +9,7 @@
     %link(href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ana Enders Blog RSS")/
     %link(href="/stylesheets/app.css" media="screen" rel ="stylesheet" type="text/css")/
     %link(href="/stylesheets/jquery-ui.css" media="screen" rel="stylesheet" type="text/css")/
+    %link(href="/images/favicon.ico" rel ="icon" type="image/x-icon")/
     %script(src="/javascripts/jquery-1.7.2.min.js" type="text/javascript")
     %script(src="/javascripts/jquery-ui-1.8.19.min.js" type="text/javascript")
     %script(src="/javascripts/underscore-1.3.1.min.js" type="text/javascript")
